--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "vite-starter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "congressional-map",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "convert": "node public/converter.mjs"
+    "build": "npm run build --workspaces --if-present",
+    "prebuild": "npm run prebuild --workspaces --if-present",
+    "dev": "npm run dev --workspaces --if-present"
   },
-  "devDependencies": {
-    "vite": "^7.1.6"
-  },
-  "dependencies": {
-    "@xmldom/xmldom": "^0.8.11",
-    "leaflet": "^1.9.4"
-  }
+  "type": "module",
+  "workspaces": [
+    "frontend"
+  ]
 }
